# tmux-agents

./: .mcp.json  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tmux_agents/: __init__.py  config.py  errors.py  logging.py  models.py  refs.py
src/tmux_agents/agents/: __init__.py  base.py  registry.py
src/tmux_agents/agents/profiles/: __init__.py  claude.py  codex.py  gemini.py
src/tmux_agents/cli/: main.py
src/tmux_agents/hooks/: __init__.py  generator.py
src/tmux_agents/mcp/: __init__.py  auth.py  http.py  server_common.py  stdio.py  tools.py
src/tmux_agents/process/: __init__.py  inspector.py  remote_inspector.py
src/tmux_agents/services/: __init__.py  capture_service.py  channel_service.py  detection_service.py  input_service.py  inventory_service.py  spawn_service.py
src/tmux_agents/ssh/: __init__.py  config_parser.py  runner.py
src/tmux_agents/tmux/: __init__.py  command_runner.py  inventory.py  metadata_store.py  socket_discovery.py
tests/: conftest.py  test_agent_profiles.py  test_capture.py  test_channels.py  test_cli.py  test_command_runner.py  test_config.py  test_detection.py  test_errors.py  test_hooks.py  test_host_scoping.py  test_input.py  test_inventory.py  test_mcp_server.py  test_mcp_stdio.py  test_mcp_tools_host.py  test_models.py  test_orchestration.py  test_refs.py  test_remote_discovery.py  test_remote_inspector.py  test_socket_discovery.py  test_spawn.py  test_ssh.py
tests/__snapshots__/: test_config.ambr  test_errors.ambr  test_models.ambr  test_refs.ambr
